# ros2_drone_sim

./: .gitignore  README.md  ai_usage.md
docs/: AI_CONTEXT.md  navigation_speed_validation.md
results/: README.md  manifest.json  submission_validation.json
results/06_disturbance/: report_metrics.json
scripts/: final_assessment_lib.sh  monitor_assessment.py  run_final_assessment.sh  test_assessment.sh  test_fast.sh  test_full.sh  test_navigation_speed_smoke.sh
src/drone_bringup/: CMakeLists.txt  package.xml
src/drone_bringup/config/: astar.yaml  astar_evaluation_scenario_a.yaml  astar_evaluation_scenario_b.yaml  astar_evaluation_scenario_c.yaml  controller.yaml  dynamics.yaml  environment.yaml  environment_narrow_passage.yaml  interactive_goal_executor.yaml  multi_goal_mission.yaml  multi_goal_mission_test.yaml  planned_trajectory.yaml  trajectory.yaml
src/drone_bringup/launch/: assessment_basic_sim.launch.py  assessment_disturbance_sim.launch.py  assessment_navigation_sim.launch.py  basic_sim.launch.py  disturbance_hover_sim.launch.py  disturbance_visual_demo.launch.py  environment_sim.launch.py  interactive_goal_editor_sim.launch.py  interactive_goal_navigation_sim.launch.py  mission_sim.launch.py  multi_goal_static_avoidance_sim.launch.py  planned_trajectory_sim.launch.py  planning_sim.launch.py  simulation_core.launch.py  static_avoidance_sim.launch.py  trajectory_sim.launch.py
src/drone_bringup/rviz/: disturbance_demo.rviz  drone_sim.rviz
src/drone_bringup/src/: disturbance_demo_node.cpp
src/drone_bringup/test/: test_assessment_basic_multi_e2e.py  test_assessment_basic_single_e2e.py  test_assessment_disturbance_launch.py  test_assessment_launch_structure.py  test_assessment_navigation_narrow_passage_e2e.py  test_astar_planner_e2e.py  test_disturbance_demo_node.py  test_disturbance_visual_launch.py  test_external_wrench.py  test_horizontal_integral_node.py  test_interactive_goal_editor_e2e.py  test_interactive_goal_navigation_e2e.py  test_interactive_mission_service.py  test_interactive_preflight_failure.py  test_launch_structure.py  test_multi_goal_static_avoidance_e2e.py  test_physical_parameter_consistency.py  test_planned_trajectory_e2e.py  test_single_goal_e2e.py  test_static_avoidance_e2e.py  test_static_environment_e2e.py  test_trajectory_mission_e2e.py  test_waypoint_mission_e2e.py
src/drone_bringup/urdf/: drone.urdf.xacro
src/drone_controller/: CMakeLists.txt  package.xml
src/drone_controller/include/drone_controller/altitude/: altitude_controller.hpp
src/drone_controller/include/drone_controller/attitude/: attitude_controller.hpp
src/drone_controller/include/drone_controller/hover/: hover_controller.hpp
src/drone_controller/include/drone_controller/mixer/: motor_mixer.hpp
src/drone_controller/include/drone_controller/position/: horizontal_position_controller.hpp  position_controller.hpp
src/drone_controller/src/: altitude_controller.cpp  attitude_controller.cpp  horizontal_position_controller.cpp  hover_controller.cpp  motor_mixer.cpp  position_controller.cpp  position_controller_node.cpp
src/drone_controller/test/: test_altitude_controller.cpp  test_attitude_controller.cpp  test_horizontal_position_controller.cpp  test_hover_controller.cpp  test_motor_mixer.cpp  test_position_controller.cpp
src/drone_dynamics/: CMakeLists.txt  package.xml
src/drone_dynamics/include/drone_dynamics/: quadrotor_model.hpp
src/drone_dynamics/src/: quadrotor_dynamics_node.cpp  quadrotor_model.cpp
src/drone_dynamics/test/: test_attitude_closed_loop.cpp  test_quadrotor_model.cpp
src/drone_mission/: CMakeLists.txt  package.xml
src/drone_mission/include/drone_mission/: goal_input.hpp  goal_visualization.hpp  piecewise_quintic_trajectory.hpp  waypoint_manager.hpp
src/drone_mission/src/: goal_cli.cpp  goal_input.cpp  goal_visualization.cpp  goal_visualizer_node.cpp  piecewise_quintic_trajectory.cpp  trajectory_mission_node.cpp  waypoint_manager.cpp  waypoint_manager_node.cpp
src/drone_mission/test/: test_goal_input.cpp  test_goal_visualization.cpp  test_goal_visualizer_node.py  test_piecewise_quintic_trajectory.cpp  test_waypoint_manager.cpp  test_waypoint_service.py
src/drone_planning/: CMakeLists.txt  package.xml
src/drone_planning/include/drone_planning/: astar_planner.hpp  axis_aligned_box.hpp  collision_checker.hpp  goal_completion_gate.hpp  grid_index.hpp  interactive_goal_editor.hpp  mission_failure_safety.hpp  multi_goal_visualization.hpp  path_simplifier.hpp  planned_trajectory_builder.hpp  static_environment.hpp  turn_speed_policy.hpp  yaw_reference_generator.hpp
src/drone_planning/src/: astar_planner.cpp  astar_planner_node.cpp  collision_checker.cpp  goal_completion_gate.cpp  interactive_goal_editor.cpp  interactive_goal_editor_node.cpp  map_reachability_check.cpp  mission_failure_safety.cpp  multi_goal_static_avoidance_node.cpp  multi_goal_visualization.cpp  path_simplifier.cpp  planned_trajectory_builder.cpp  planned_trajectory_node.cpp  static_environment.cpp  static_environment_node.cpp  turn_speed_policy.cpp  yaw_reference_generator.cpp
src/drone_planning/test/: test_astar_planner.cpp  test_collision_checker.cpp  test_goal_completion_gate.cpp  test_interactive_goal_editor.cpp  test_mission_failure_safety.cpp  test_multi_goal_visualization.cpp  test_path_simplifier.cpp  test_planned_trajectory_builder.cpp  test_turn_speed_policy.cpp  test_yaw_reference_generator.cpp
tools/: analyze_assessment_run.py  analyze_navigation_geometry.py  apply_external_wrench.py  assessment_metrics.py  assessment_recorder.py  audit_vehicle_capability.py  build_disturbance_report_metrics.py  dynamics_probe.py  evaluate_controller_envelope.py  evaluate_dynamics_parameter_sweep.py  evaluate_horizontal_integral.py  evaluate_hover_disturbance.py  evaluate_multi_goal_mission.py  evaluate_static_avoidance.py  final_assessment_manifest.py  generate_vehicle_upgrade_report.py  live_monitor_metrics.py  navigation_speed_smoke.py  run_navigation_speed_sweep.py  run_simplifier_clearance_sweep.py  run_trajectory_curvature_timing_sweep.py
(+231 files in other folders)
