<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration resources for the quadrotor simulation.</description>
  <maintainer email="18850252651@163.com">Peter</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>drone_controller</exec_depend>
  <exec_depend>drone_dynamics</exec_depend>
  <exec_depend>drone_mission</exec_depend>
  <exec_depend>drone_planning</exec_depend>
  <depend>drone_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-yaml</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>visualization_msgs</test_depend>
  <test_depend>interactive_markers</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
