<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_dynamics</name>
  <version>0.1.0</version>
  <description>Quadrotor dynamics algorithm and ROS2 node skeleton.</description>
  <maintainer email="18850252651@163.com">Peter</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>drone_msgs</depend>
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>drone_controller</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
